// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx SSR transform > should work with CSS-in-JS in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setClass as _setClass$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-styled>");
const StyledComponent = ({
  className,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], className);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(StyledComponent, {
  "className": "generated-class",
  "children": ["Styled Content"]
});"
`;

exports[`jsx SSR transform > should work with async data in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>");
const AsyncComponent = async ({
  data
}) => {
  const result = await data;
  return (() => {
    const _el = _tmpl$();
    const _nodes = _mapNodes$(_el, [1]);
    _insert$(_nodes[0], () => result);
    return _el;
  })();
};
const element = _createComponent$(AsyncComponent, {
  "data": Promise.resolve('async content')
});"
`;

exports[`jsx SSR transform > should work with bind api 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const value = 1;
(() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [2]);
  _setAttr$(_nodes[0], "value", value);
  _setAttr$(_nodes[0], "updateValue", _value => value = _value);
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with comment in JSX 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const value = 1;
(() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [3]);
  _setAttr$(_nodes[0], "value", value);
  _setAttr$(_nodes[0], "updateValue", _value => value = _value);
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with conditional rendering in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><!>"),
  _tmpl$2 = _getNextElement$("<p>Visible Content"),
  _tmpl$3 = _getNextElement$("<span>True"),
  _tmpl$4 = _getNextElement$("<span>False");
const isVisible = true;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2]);
  _insert$(_nodes[0], () => isVisible && (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(), _nodes[1]);
  _insert$(_nodes[0], () => isVisible ? (() => {
    const _el3 = _tmpl$3();
    return _el3;
  })() : (() => {
    const _el4 = _tmpl$4();
    return _el4;
  })());
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with context in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div data-theme=\\"dark\\">Themed Content");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const element = _createComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [(() => {
    const _el = _tmpl$();
    return _el;
  })()]
});"
`;

exports[`jsx SSR transform > should work with data fetching in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-ssr-data>");
const DataComponent = ({
  data
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => JSON.stringify(data));
  return _el;
})();
const element = _createComponent$(DataComponent, {
  "data": {
    key: 'value'
  }
});"
`;

exports[`jsx SSR transform > should work with error handling in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div>Error Page"),
  _tmpl$2 = _getNextElement$("<div>Protected Content");
const ErrorBoundary = ({
  fallback,
  children
}) => {
  try {
    return children;
  } catch (error) {
    return fallback;
  }
};
const element = _createComponent$(ErrorBoundary, {
  "fallback": (() => {
    const _el = _tmpl$();
    return _el;
  })(),
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with event handlers in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, addEventListener as _addEventListener$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<button>Click me");
const handleClick = () => console.log('clicked');
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _addEventListener$(_nodes[0], "click", handleClick);
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with head management in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<head data-ssr>"),
  _tmpl$2 = _getNextElement$("<svg _svg_><title>Page Title</title>"),
  _tmpl$3 = _getNextElement$("<meta name=\\"description\\" content=\\"Page description\\"/>");
const Head = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(Head, {
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(), (() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with hydration attributes 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div data-hydrate=\\"true\\">Hydration Content");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with list rendering in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<ul>"),
  _tmpl$2 = _getNextElement$("<li>");
const items = ['Item 1', 'Item 2', 'Item 3'];
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => items.map((item, index) => (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _insert$(_nodes2[0], () => item);
    return _el2;
  })()));
  return _el;
})();"
`;

exports[`jsx SSR transform > should work with nested components and props in SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Name:<!>, Age:"),
  _tmpl$2 = _getNextElement$("<div><!>");
const Child = ({
  name,
  age
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 3]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  _insert$(_nodes[0], () => age);
  return _el;
})();
const Parent = () => (() => {
  const _el2 = _tmpl$2();
  const _nodes2 = _mapNodes$(_el2, [1, 2]);
  _insert$(_nodes2[0], () => _createComponent$(Child, {
    "name": "John",
    "age": 25
  }), _nodes2[1]);
  _insert$(_nodes2[0], () => _createComponent$(Child, {
    "name": "Jane",
    "age": 23
  }));
  return _el2;
})();"
`;

exports[`jsx SSR transform > should work with streaming SSR 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$, setAttr as _setAttr$ } from "est";
const _tmpl$ = _getNextElement$("<div>"),
  _tmpl$2 = _getNextElement$("<div>");
const StreamingComponent = ({
  chunks
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => chunks.map((chunk, index) => (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _setAttr$(_nodes2[0], "data-chunk", index);
    _insert$(_nodes2[0], () => chunk);
    return _el2;
  })()));
  return _el;
})();
const element = _createComponent$(StreamingComponent, {
  "chunks": ['chunk1', 'chunk2']
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and context 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-context>"),
  _tmpl$2 = _getNextElement$("<div>Streaming Context Content");
const StreamingContext = ({
  value,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(ThemeContext.Provider, {
    "value": value,
    "children": [children]
  }));
  return _el;
})();
const element = _createComponent$(StreamingContext, {
  "value": "dark",
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and custom hooks 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-hook>");
const useStreamingHook = () => ({
  value: 'streaming'
});
const StreamingHook = () => {
  const {
    value
  } = useStreamingHook();
  return (() => {
    const _el = _tmpl$();
    const _nodes = _mapNodes$(_el, [1]);
    _insert$(_nodes[0], () => value);
    return _el;
  })();
};
const element = _createComponent$(StreamingHook, {});"
`;

exports[`jsx SSR transform > should work with streaming SSR and data fetching 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-data>"),
  _tmpl$2 = _getNextElement$("<div>Loading data..."),
  _tmpl$3 = _getNextElement$("<div>Data Content");
const StreamingData = ({
  data,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => data ? children : (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })());
  return _el;
})();
const element = _createComponent$(StreamingData, {
  "data": {
    key: 'value'
  },
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and dynamic imports 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-dynamic>"),
  _tmpl$2 = _getNextElement$("<div>Loading...");
const StreamingDynamic = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(Suspense, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [_createComponent$(StreamingDynamic, {
    "children": [import('./Component')]
  })]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and error boundaries 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-error>"),
  _tmpl$2 = _getNextElement$("<div>Error occurred!"),
  _tmpl$3 = _getNextElement$("<div>Protected Streaming Content");
const StreamingErrorBoundary = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(ErrorBoundary, {
    "fallback": fallback,
    "children": [children]
  }));
  return _el;
})();
const element = _createComponent$(StreamingErrorBoundary, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and error boundaries 2`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-error-boundary>"),
  _tmpl$2 = _getNextElement$("<div>Error occurred!"),
  _tmpl$3 = _getNextElement$("<div>Protected Content");
const StreamingErrorBoundary = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(ErrorBoundary, {
    "fallback": fallback,
    "children": [children]
  }));
  return _el;
})();
const element = _createComponent$(StreamingErrorBoundary, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and error handling 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-error>"),
  _tmpl$2 = _getNextElement$("<div>Error:"),
  _tmpl$3 = _getNextElement$("<div>Streaming Content");
const StreamingError = ({
  error,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => error ? (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _insert$(_nodes2[0], () => error.message);
    return _el2;
  })() : children);
  return _el;
})();
const element = _createComponent$(StreamingError, {
  "error": null,
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and forwardRef 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-forward>"),
  _tmpl$2 = _getNextElement$("<div>Streaming Forward Ref Content");
const StreamingForwardRef = React.forwardRef((props, ref) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "ref", ref);
  _insert$(_nodes[0], () => props.children);
  return _el;
})());
const element = _createComponent$(StreamingForwardRef, {
  "ref": React.createRef(),
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and hydration 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-hydration>"),
  _tmpl$2 = _getNextElement$("<div data-hydrate=\\"true\\">Hydration Content");
const StreamingHydration = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(StreamingHydration, {
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and lazy loading 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-lazy>"),
  _tmpl$2 = _getNextElement$("<div>Loading...");
const StreamingLazy = ({
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => children);
  return _el;
})();
StreamingLazy._lazy = true;
const element = _createComponent$(Suspense, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [_createComponent$(StreamingLazy, {
    "children": ["Lazy Content"]
  })]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and loading states 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-loading>"),
  _tmpl$2 = _getNextElement$("<div>Loading..."),
  _tmpl$3 = _getNextElement$("<div>Loaded Content");
const StreamingLoading = ({
  isLoading,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => isLoading ? (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })() : children);
  return _el;
})();
const element = _createComponent$(StreamingLoading, {
  "isLoading": false,
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and memo 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-memo>");
const StreamingMemo = ({
  value
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => value);
  return _el;
})();
StreamingMemo._memo = true;
const element = _createComponent$(StreamingMemo, {
  "value": "Memo Content"
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and multiple contexts 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-contexts>"),
  _tmpl$2 = _getNextElement$("<div>Multiple Contexts Content");
const StreamingContexts = ({
  theme,
  user,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(ThemeContext.Provider, {
    "value": theme,
    "children": [_createComponent$(UserContext.Provider, {
      "value": user,
      "children": [children]
    })]
  }));
  return _el;
})();
const element = _createComponent$(StreamingContexts, {
  "theme": "dark",
  "user": {
    name: 'John'
  },
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and portals 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-portal>"),
  _tmpl$2 = _getNextElement$("<div>Streaming Portal Content");
const StreamingPortal = ({
  target,
  children
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "data-target", target);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(StreamingPortal, {
  "target": "modal",
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and refs 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-ref>"),
  _tmpl$2 = _getNextElement$("<div>Streaming Ref Content");
const StreamingRef = ({
  children
}, ref) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "ref", ref);
  _insert$(_nodes[0], () => children);
  return _el;
})();
const element = _createComponent$(StreamingRef, {
  "ref": React.createRef(),
  "children": [(() => {
    const _el2 = _tmpl$2();
    return _el2;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and suspense 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming>"),
  _tmpl$2 = _getNextElement$("<div>Loading..."),
  _tmpl$3 = _getNextElement$("<div>Streaming Content");
const StreamingSuspense = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(Suspense, {
    "fallback": fallback,
    "children": [children]
  }));
  return _el;
})();
const element = _createComponent$(StreamingSuspense, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > should work with streaming SSR and suspense boundaries 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div data-streaming-suspense>"),
  _tmpl$2 = _getNextElement$("<div>Loading..."),
  _tmpl$3 = _getNextElement$("<div>Suspense Content");
const StreamingSuspenseBoundary = ({
  children,
  fallback
}) => (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _insert$(_nodes[0], () => _createComponent$(Suspense, {
    "fallback": fallback,
    "children": [children]
  }));
  return _el;
})();
const element = _createComponent$(StreamingSuspenseBoundary, {
  "fallback": (() => {
    const _el2 = _tmpl$2();
    return _el2;
  })(),
  "children": [(() => {
    const _el3 = _tmpl$3();
    return _el3;
  })()]
});"
`;

exports[`jsx SSR transform > transforms JSX element with JSX fragment 1`] = `
"import { getNextElement as _getNextElement$, Fragment as _Fragment$ } from "est";
const _tmpl$ = _getNextElement$("<p>Paragraph 1</p><p>Paragraph 2</p>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with JSX fragment as children 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with SVG tags 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<svg _svg_><svg><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" stroke=\\"black\\" stroke-width=\\"3\\" fill=\\"red\\">");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with attributes 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div id=\\"myId\\" class=\\"myClass\\">Hello, World!");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with boolean attribute 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<input disabled/>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with children 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with class and style attributes 1`] = `
"import { computed as _computed$, getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setClass as _setClass$, setStyle as _setStyle$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const hasClass = true;
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], _computed$(() => hasClass ? 'myClass' : ''));
  _setStyle$(_nodes[0], style);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with conditional attributes 1`] = `
"import { computed as _computed$, getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setClass as _setClass$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const hasClass = true;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setClass$(_nodes[0], _computed$(() => hasClass ? 'myClass' : 'otherClass'));
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with dynamic expressions 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello,<!>!");
const name = 'John';
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 3]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with function components 1`] = `
"import { createComponent as _createComponent$, getNextElement as _getNextElement$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><!>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2]);
  _insert$(_nodes[0], () => _createComponent$(MyComponent, {
    "text": "Component 1"
  }), _nodes[1]);
  _insert$(_nodes[0], () => _createComponent$(MyComponent, {
    "text": "Component 2"
  }));
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with nested expressions and children 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><p><!>'s Profile</p><ul></ul>"),
  _tmpl$2 = _getNextElement$("<li>Item");
const name = 'John';
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [2, 3, 5]);
  _insert$(_nodes[0], () => name, _nodes[1]);
  _insert$(_nodes[2], () => Array.from({
    length: 3
  }, (_, i) => (() => {
    const _el2 = _tmpl$2();
    const _nodes2 = _mapNodes$(_el2, [1]);
    _insert$(_nodes2[0], () => i + 1);
    return _el2;
  })()));
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with null and undefined attributes 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, setClass as _setClass$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "id", null);
  _setClass$(_nodes[0], undefined);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with null and undefined children 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><!><p>Paragraph 1</p><!><!><p>Paragraph 2</p>");
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 2, 5, 6]);
  _insert$(_nodes[0], () => null, _nodes[1]);
  _insert$(_nodes[0], () => undefined, _nodes[2]);
  _insert$(_nodes[0], () => false, _nodes[3]);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with null and undefined in expressions 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div><p><!>'s Profile</p><!><p>Paragraph 2</p>");
const name = null;
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1, 5, 2, 3]);
  _insert$(_nodes[0], () => undefined, _nodes[1]);
  _insert$(_nodes[2], () => name, _nodes[3]);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with self-closing tags 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div><img src=\\"image.jpg\\" alt=\\"Image 1\\"/><img src=\\"image.jpg\\" alt=\\"Image 2\\"/>");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with spread attributes 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setAttr as _setAttr$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const props = {
  id: 'myId',
  class: 'myClass'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setAttr$(_nodes[0], "_$spread$", props);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms JSX element with style attribute 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$, mapNodes as _mapNodes$, setStyle as _setStyle$, insert as _insert$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = (() => {
  const _el = _tmpl$();
  const _nodes = _mapNodes$(_el, [1]);
  _setStyle$(_nodes[0], style);
  return _el;
})();"
`;

exports[`jsx SSR transform > transforms simple JSX element 1`] = `
"import { getNextElement as _getNextElement$, createComponent as _createComponent$ } from "est";
const _tmpl$ = _getNextElement$("<div>Hello, World!");
const element = (() => {
  const _el = _tmpl$();
  return _el;
})();"
`;
